force-app/main/default/objects/ModuleEnrolled__c/ModuleEnrolled__c.object-meta.xml
<CustomObject>
    <label>Module Enrolled</label>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modules Enrolled</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>