force-app/main/default/objects/ModuleEnrolled__c/fields/CreditsEarned__c.field-meta.xml
<CustomField>
    <fullName>CreditsEarned__c</fullName>
    <label>Credits Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>