force-app/main/default/objects/ModuleEnrolled__c/fields/PassFail__c.field-meta.xml
<CustomField>
    <fullName>PassFail__c</fullName>
    <label>Pass / Fail?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>