force-app/main/default/objects/ModuleEnrolled__c/validationRules/CreditsEarnedCannotExceedMax.validationRule-meta.xml
<ValidationRule>
    <fullName>CreditsEarnedCannotExceedMax</fullName>
    <active>true</active>
    <errorConditionFormula>CreditsEarned__c  &gt;  Module__r.MaxCredits__c</errorConditionFormula>
    <errorMessage>Marks Earned cannot exceed Maximum Marks of Module</errorMessage>
</ValidationRule>